<resources>
    <string name="app_name">MyBroadcastReceiver</string>
    <string name="this_sms_receiver_app">Ini aplikasi sms receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi nggak? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check Sms Permission</string>
</resources>
